--- a/Cargo.toml
+++ b/Cargo.toml
@@ -71,9 +71,8 @@ name = "eza"
 
 
 [dependencies]
-ansi-width = "0.1.0"
-ansiterm = { version = "0.12.2", features = ["ansi_colours"] }
-chrono = { version = "0.4.34", default-features = false, features = ["clock"] }
+nu-ansi-term = "0.49.0"
+chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
 glob = "0.3"
 libc = "0.2"
 locale = "0.2"
